@@ -30,6 +30,7 @@ Improved GUI.
 IRC client with the ability to save chat sessions to a S3 bucket.
 Support for accessing a shared bucket.
 Support for sharing bucket access with a canonical ID.
+"File -> New Window" - Run another instance of Cloud Explorer!
 
 Features:
 
